- Fixed an issue with MAG being removed incorrectly when using the Mystic Adept Second Attribute optional rule if the charactrer started with a magic attribute, such as shapeshifters. Fixes #3253
- Fixed behaviour of plugins incorrectly applying their Essence costs in career mode instead of using the capacity cost. Should fix #3279, may have some additional edge cases.

Data Changes:

- Fixed Autopicker having an incorrect cost. Fixes #3167.
- Fixed an issue with Japanese translations of certain lifestyle qualities caused by duplicate entries. Fixes #3168.
- Added content from the German-exclusive sourcebook "Hamburg".
- Removed redundant 'Enable Spells and Spirits Tab' improvement. Closes #3189
- Added an optional rule from Chrome Flesh to allow Trolls to treat their horns as per the bio-weapon on page 121 of Chrome Flesh. 
- Fixed incorrect requirements for the Special Modifications and Prototype Materials qualities. 
- The Dual Natured critter power now grants access to Astral Combat. Magical Guard now grants access to the Counterspelling skill. RAW implies this is correct, but I'm not super confident in it. Closes #3195
- Added missing critter powers from Dark Terrors, courtesy of Keeper M. 
- Per updated Runnerhub Rules, the Liminal bodies are now available and Armor enhancements can be added to skulls and torsos.
- Fixed conditional behaviour on the Death Dealer quality to properly work for Mystic Adepts. Fixes #3255
- Fixed an incorrect cost for Household Gremlins (1600 instead of 600).
- Fixed incorrect costs for the Dermal Alteration (Rhino Hide) and Functional Tail (Prehensile) qualities. 
- Added an amend file to allow the Practice, Practice, Practice quality to be taken multiple times, per German data changes.
- Fixed incorrect ratings on the Fortified and Slick Willy booster chips.
- Fixed a crash when selecting components of Commlink Functionality on gear. Fixes #3178

New Strings:

- Checkbox_DiceRoller_VariableGlitch

Build 203

Application Changes: